Add automatic conflict-free task sync
